--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,15 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.ini
+*.rtf
 
 # C extensions
 *.so
 
 # Distribution / packaging
 .Python
+*.DS_Store
 build/
 develop-eggs/
 dist/
